--- a/环境搭建.md
+++ b/环境搭建.md
@@ -12,14 +12,14 @@
 
 
 
-![nodedown](/Users/brucefang/Downloads/react教程img/nodedown.jpg)
+![nodedown](/react教程img/nodedown.jpg)
 
 2、选择电脑系统对应的版本下载即可，下载完成安装nodejs，安装过程基本直接“NEXT”就可以了。（windows的安装msi文件在过程中会直接添加path的系统变量，变量值是你的安装路径，例如“C:\Program Files\nodejs”）。
 3、安装完成后可以使用cmd（win+r然后输入cmd进入）测试下是否安装成功。方法：在cmd下输入node -v，出现下图版本提示就是完成了NodeJS的安装。
 
 （mac安装完成查看版本）
 
-![node版本](/Users/brucefang/Downloads/react教程img/node版本.jpg)
+![node版本](/react教程img/node版本.jpg)
 
 （windows安装完成查看版本）![window版本](/Users/brucefang/Downloads/react教程img/window版本.jpg)
 
@@ -173,7 +173,7 @@ uba.mock.js文件📃是uba模拟本地数据请求配置文件，文件指定GE
 - 第二点，当我们好不容易做好了技术选型，又要花很多时间来拼凑他们，并且需要沉淀很长时间，踩很多的坑，来得到一个比较好的实践。
 
 - 第三点，现在前端工程日益复杂，目前主流的方案，都需要依赖于webpack或是其他工具来辅助开发。配置开发工程已经很需要耗时耗力了，
-在上线时，还需要更深入的了解这些工具，来优化我们的工具配置和代码。
+  在上线时，还需要更深入的了解这些工具，来优化我们的工具配置和代码。
 
 这些内容都耗费了我们大量的心力和时间。所以这里将我们在项目中的最佳实践，分享出来，做一个整体技术方案，介绍给大家。
 
