--- a/环境搭建.md
+++ b/环境搭建.md
@@ -12,16 +12,16 @@
 
 
 
-![nodedown](/react教程img/nodedown.jpg)
+![nodedown](react教程img/nodedown.jpg)
 
 2、选择电脑系统对应的版本下载即可，下载完成安装nodejs，安装过程基本直接“NEXT”就可以了。（windows的安装msi文件在过程中会直接添加path的系统变量，变量值是你的安装路径，例如“C:\Program Files\nodejs”）。
 3、安装完成后可以使用cmd（win+r然后输入cmd进入）测试下是否安装成功。方法：在cmd下输入node -v，出现下图版本提示就是完成了NodeJS的安装。
 
 （mac安装完成查看版本）
 
-![node版本](/react教程img/node版本.jpg)
+![node版本](react教程img/node版本.jpg)
 
-（windows安装完成查看版本）![window版本](/Users/brucefang/Downloads/react教程img/window版本.jpg)
+（windows安装完成查看版本）![window版本](react教程img/window版本.jpg)
 
 4、npm的安装。由于新版的NodeJS已经集成了npm，所以之前npm也一并安装好了。同样可以使用cmd命令行输入"npm -v"来测试是否成功安装。如下图，出现版本提示便OK了。
 
